tests/detection/syntax_error/setup.py
from distutils.core import setup

setup(
    name='prospector-test-1',
    version='0.0.1',
    install_requires=[
        'Django==1.11.29',
        'django-gubbins==1.1.2'
    ] narm narm narm
)